chore: add declarative linking